testdata/trans/error/type-check1/err.go
package foo

import (
	"fmt"
	"unknown/package/path"
	"unknown/package/path2"
)

func f() error {
	x = try(fmt.Println("hello"))
}
